gateway/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sp-ingress
  namespace: sp
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: sp-issuer
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
#nginx 수혁추가
spec:
  tls:
    - hosts:
        - "server.silverpotion.site"
      secretName: server-silverpotion-site-tls
  rules:
    - host: server.silverpotion.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
